# python

./: README.md  main.py  pyproject.toml
exercises/01_python_mastery/: 01_basics.py  02_pro_python.py
exercises/02_data_science/: 03_feature_eng_challenge.py
exercises/02_ds_ml/: 02_data_science_challenge.py
exercises/03_classic_ml/: 03_titanic.py  04_hyperparameter_tuning.py  05_clustering_challenge.py
exercises/04_deep_learning/: 04_architect.py  05_pytorch.py
exercises/05_production/: 06_sentiment_api.py
exercises/07_math_bio/: 01_sir_outbreak.py
exercises/08_comp_neuro/: 01_lif_simulation.py
exercises/09_spatial_bio/: 01_drug_diffusion.py
exercises/10_stochastic/: 01_stochastic_sir.py
exercises/11_abm/: 01_tumor_agent.py
exercises/12_fitting/: 01_enzyme_kinetics.py
exercises/20_graphing/: 01_dual_axis_plot.py  02_3d_surface.py  03_phase_portrait_stream.py
lessons/01_basics/: 01_intro.py  02_variables.py  03_control_flow.py  04_oop_intro.py  05_advanced_concepts.py
lessons/02_data_science/: 04_numpy_basics.py  05_pandas_basics.py  06_pandas_advanced.py  07_feature_engineering.py
lessons/03_machine_learning/: 08_linear_regression.py  09_classification_basics.py  10_random_forests.py  11_model_evaluation.py  12_clustering_pca.py
lessons/04_advanced_ai/: 14_neural_networks.py  15_nlp_basics.py
lessons/05_pytorch_deep_learning/: 16_pytorch_basics.py  17_cnn_vision.py
lessons/06_production_ai/: 20_api_serving.py
lessons/07_mathematical_biology/: 01_ode_basics.py  02_coupled_odes.py  03_tumor_model.py  04_scientific_ml.py
(+16 files in other folders)
